# tiemur_bot_rs

./: .dockerignore  Cargo.toml  Dockerfile
src/: lib.rs  main.rs  message.rs  types.rs
src/config/: mod.rs
src/db/: mod.rs
src/message/: mod.rs  response.rs
src/types/: error.rs  mod.rs
tests/: test.rs
