[package]
name = "tiemur_bot_rs"
version = "0.1.0"
authors = ["Marat Safin <jeizsm@gmail.com>"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"
hyper = "0.11"
hyper-rustls = "0.11"
img_hash = "2.0"
image = "*"
bit-vec = "*"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
log = "0.3"
env_logger = "0.4"
error-chain = "0.11"
sled = "0.14"
lazy_static = "1.0"
envy = "0.3"

[dependencies.telegram-bot]
git = "https://github.com/jeizsm/telegram-bot.git"
branch="feature/complex-requests"
default-features=false
features=["rustls_connector"]
